tests/files/flow_controller_tests/should_fail/065.cmdr
x = "cat";
print tanh(x);